[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Cactus/cactus_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Objects/Cactus/Cactus.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=8]
radius = 17.0
height = 37.7692

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 70 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 70 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 70 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 70 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Cactus" type="Area2D"]
scale = Vector2( 2, 1.2 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -1.90735e-06 )
scale = Vector2( 1.35, 3.1 )

[connection signal="body_shape_entered" from="." to="." method="_on_Cactus_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_Cactus_screen_exited"]
